Apply suggestions from code review

--- a/modules/ROOT/pages/conf-examples/search/configure-search.adoc
+++ b/modules/ROOT/pages/conf-examples/search/configure-search.adoc
@@ -8,30 +8,30 @@
 
 == Introduction
 
-{description} Using search is a good way to find documents based on varios criterias. The search service will return results for documents the searcher is eligable to access. Read the description of the xref:{s-path}/search.adoc[search service] for more details.
+{description} Using search is a good way to find documents based on various criteria. The search service will return results for documents the searcher is eligible to access. Read the description of the xref:{s-path}/search.adoc[search service] for more details.
 
 You can use basic search functionality without any configuration as it is preconfigured when using the default binary or container/orchestration deployment.
 
 == Index Data
 
-With basic search, only metadata is indexed. Content can be searched when configuring Tika as content extraction engine.
+With basic search, only metadata is indexed. Content can be searched when configuring Tika as the content extraction engine.
 
 * *Metadata:* all data that _describes_ the file like `Name`, `Size`, `MimeType`, `Tags` and `Mtime`.
 * *Content:* all data that _relates to content_ of the file like `words`, `geo data`, `exif data` etc.
 
 Depending on the configuration, space requirements can differ. 
 
-Indexing is a non-blocking operation. It is triggered by various events (see xref:{s-path}/search.adoc#state-changes-which-trigger-indexing[State Changes which Trigger Indexing]) and does not prevent file access by users. While indexing metadata is more or less instantanious, extracting and indexing content can take some time depending on the setup and size of the document.
+Indexing is a non-blocking operation. It is triggered by various events (see xref:{s-path}/search.adoc#state-changes-which-trigger-indexing[State Changes which Trigger Indexing]) and does not prevent file access by users. While indexing metadata is more or less instantaneous, extracting and indexing content can take some time depending on the setup and size of the document.
 
 == General Considerations
 
 === Space Requirements
 
-There is no definitive answer how much space needs to be provided for storing the index or how it can be calculated. The only valid answer to that question is - it depends and and you need to monitor it. Note that monitoring is not part of this document.
+There is no definitive answer as to how much space needs to be provided for storing the index or how it can be calculated. The only valid answer to that question is - it depends and and you need to monitor it. Note that monitoring is not part of this document.
 
 Here are some notes to give some guidance:
 
-* Extracting and indexing metadata consumes only little space compared to a content index, though it can be significant in an environment with a lot of data and limited filesystem space.
+* Extracting and indexing metadata consumes only little space compared to a content index, though it can be significant in an environment with a lot of files and limited filesystem space.
 * When extracting and indexing content, the range for the consumed index can be - as rule of thumb - between 50-200% of saved documents containing text. Being conservative and taking a value of 150%, having 3TB of documents where text based data can be extracted, would require up to 4.5TB - only for the content index.
 
 IMPORTANT: Having the index on the default location unmonitored, filling up the filesystem by the index can happen silently and make Infinite Scale unresponsive. As the OS, Infinite Scale and its data share the same filesystem, recovery can be a task taking considerable downtime.
@@ -39,7 +39,7 @@ IMPORTANT: Having the index on the default location unmonitored, filling up the 
 === Index Location and Scaling
 
 * The location of the search index can be customized and should be on a fast backend.
-* Consider own hardware for the search service if responsetime is critical for your environment, as xref:deployment/services/deployment-considerations.adoc#scaling-of-services[scaling] is currently not possibe for the search service.
+* Consider separate hardware for the search service if response time is critical for your environment, as xref:deployment/services/deployment-considerations.adoc#scaling-of-services[scaling] is currently not possible for the search service.
 ** Content extraction can consume considerable CPU and memory ressources and naturally competes with all other services if running on the same hardware. It has to extract every document and index it before it is available for searching.
 * The search index can be manually relocated and search reconfigured to use the new path.
 
@@ -48,7 +48,7 @@ IMPORTANT: Having the index on the default location unmonitored, filling up the 
 If it becomes necessary to relocate the index, you need to:
 
 * Shut down the Infinite Scale instance. +
-This is necessary to avoid changes that miss to trigger an index update.
+This is necessary to avoid changes that miss triggering an index update.
 * Move the contents referenced via `SEARCH_ENGINE_BLEVE_DATA_PATH` to a new location.
 * Define the new location in `SEARCH_ENGINE_BLEVE_DATA_PATH`.
 * Restart the Infinite Scale instance.
@@ -77,11 +77,11 @@ Though you can compile Tika manually on your system by following the https://tik
 
 ==== Prerequisites
 
-The following describes how to make Tika availabe for your environment.
+The following describes how to make Tika available for your environment.
 
 ===== Container Based
 
-Check that you have xref:deployment/container/container-setup.adoc#docker-prerequisites[docker] and xref:deployment/container/container-setup.adoc#docker-prerequisites[docker compose] respectively a xref:deployment/container/orchestration/orchestration.adoc[container orchestration] installed.
+Check that you have xref:deployment/container/container-setup.adoc#docker-prerequisites[docker] and xref:deployment/container/container-setup.adoc#docker-prerequisites[docker compose] and xref:deployment/container/orchestration/orchestration.adoc[container orchestration] installed.
 
 To see if the Tika container runs on your architecture, type:
 
@@ -109,7 +109,7 @@ It is then accessible via `\http://your-server:9998`. Check that the Tika server
 
 ==== Configure Search using the Tika Extractor
 
-As prerequisite, Tika needs to be accessible via `\http://your-server:9998` either using the manual installation or via docker. You can decide to let Tika run on an own or on the same server where the search service runs. The following configuration assumes that all Infinite Scale services including the search service and Tika run on the same hardware.
+As prerequisite, Tika needs to be accessible via `\http://your-server:9998` either using the manual installation or via docker. You can decide to let Tika run on the same or a separate server from where the search service runs. The following configuration assumes that all Infinite Scale services including the search service and Tika run on the same hardware.
 
 These configuration parameters need to be set for the use of Tika:
  
