Apply suggestions from code review
language review

--- a/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
@@ -1,6 +1,6 @@
 = Userlog Service Configuration
 :toc: right
-:description: The Infinite Scale userlog service is a mediator between the eventhistory service and clients who want to be informed about user related events. It provides an API to retrieve those.
+:description: The Infinite Scale userlog service is a mediator between the eventhistory service and clients who want to be informed about user-related events. It provides an API to retrieve those.
 
 :oc10-api-url: https://doc.owncloud.com/server/next/developer_manual/core/apis/ocs-notification-endpoint-v1.html#get-user-notifications
 
@@ -48,12 +48,12 @@ The `userlog` service persists information via the configured store in `USERLOG_
 |===
 
 1. Note that in-memory stores are by nature not reboot persistent.
-2. Though usually not necessary, a database name and a database table can be configured for event stores if the event store supports this. Generally not applicapable for stores of type `in-memory`. These settings are blank by default which means that the standard settings of the configured store applies.
+2. Though usually not necessary, a database name and a database table can be configured for event stores if the event store supports this. Generally, this does not apply to stores of type `in-memory`. These settings are blank by default which means that the standard settings of the configured store applies.
 3. The `userlog` service can be scaled if not using `in-memory` stores and the stores are configured identically over all instances.
 
 == Configuring Events
 
-For the time being, the configuration which user related events are of interest is hardcoded and cannot be changed.
+Currently, the configuration which user-related events are of interest is hard-coded and cannot be changed.
 
 == Retrieving
 
