--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -1,7 +1,6 @@
 = Container Orchestration
 :toc: right
 :toclevels: 3
-:description: In this section, we provide guidelines for container orchestration tools suitable for Infinite Scale like {docker-compose-url}[Docker-Compose] and {kubernetes-url}[Kubernetes]. Other container orchestration tools like {docker-swarm-url}[Docker Swarm] can be derived from these.
 
 :docker-compose-url: https://docs.docker.com/get-started/08_using_compose/
 :docker-compose-install-url: https://docs.docker.com/compose/install/
@@ -41,6 +40,8 @@
 
 // note the attributes `tab_xxx` definition needed for the tab definitions are in antora.yaml
 
+:description: In this section, we provide guidelines for container orchestration tools suitable for Infinite Scale like {docker-compose-url}[Docker Compose] and {kubernetes-url}[Kubernetes]. Other container orchestration tools like {docker-swarm-url}[Docker Swarm] can be derived from these.
+
 == Introduction
 
 {description} Container orchestration tools are necessary to meet the requirements described in the xref:availability_scaling/availability_scaling.adoc#container[Availability and Scalability] guide starting at the _Container_ section.
@@ -75,15 +76,15 @@ which docker-compose
 
 If `docker-compose` is installed, you'll be informed. If not, you may get no output at all or a message that it couldn't be found. In that case you need to install `docker-compose` first. On most Linux distributions, you can simply use the package manager to do so.
 
-Note that in many cases, this will install a 1.x version (python-based) only supported until June 2023. Version 2.x (go-based) is available from Docker. Follow the {docker-compose-install-url}[Install Docker Compose] guide to install a 2.x version. Familiarize yourself with the {docker-compose-evolution}[differences between versions]. Most of our examples are still based on Compose-V1.
+Note that in many cases, this will install a 1.x version (python-based) only supported until June 2023. Version 2.x (go-based) is available from Docker. Follow the {docker-compose-install-url}[Install Docker Compose] guide to install a 2.x version. Familiarize yourself with the {docker-compose-evolution}[differences between versions] particularly with regard to syntax changes. Most of our examples are still based on Compose-V1.
 
-When done, create a project directory, like `ocis-compose` in your home directory to have a common location for your Infinite Scale compose files.
+When done, create a project directory like `ocis-compose` in your home directory to have a common location for your Infinite Scale Compose files.
 
 === Docker Compose Examples
 
 * See the xref:deployment/services/services.adoc[services section] for details about available environment variables and yaml files.
 
-* See below for example service configurations using Docker Compose, to get a first impression of how this can be achieved. Both, _ocis environment variables_ and _ocis service configuration_ yaml files are used.
+* See below for example service configurations using Docker Compose, to get a first impression of how this can be achieved. Both _ocis environment variables_ and _ocis service configuration_ yaml files are used.
 +
 [tabs]
 ====
