--- a/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
@@ -34,7 +34,7 @@ The `userlog` service persists information via the configured store in `USERLOG_
 | `ocmem`
 | Advanced in-memory store allowing max size.
 
-| `Redis`
+| `redis`
 | Stores data in a configured Redis cluster.
 
 | `etcd`
