--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -250,7 +250,7 @@ As the Helm chart has currently not been published to a Helm repository, you nee
 +
 --
 ** The `~` represents all patch releases for that particular version.
-** The `-0` represents subversions for that particular version.
+** The `-0` represents subversions of that particular version.
 --
 +
 [tabs]
