--- a/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
@@ -34,12 +34,12 @@ role_quotas:
 
 ## Automatic Role Assignments
 
-When users login, they do automatically get a role assigned. The automatic role assignment can be
+When users login, they automatically get a role assigned. The automatic role assignment can be
 configured in different ways. The `PROXY_ROLE_ASSIGNMENT_DRIVER` environment variable (or the `driver`
-setting in the `role_assignment` section of the configuration file select which mechanism to use for
+setting in the `role_assignment` section of the configuration file) selects which mechanism to use for
 the automatic role assignment.
 
-When set to `default`, all users which do not have a role assigned at the time for the first login will
+When set to `default`, all users that do not have a role assigned at the time for the first login will
 get the role 'user' assigned. (This is also the default behavior if `PROXY_ROLE_ASSIGNMENT_DRIVER`
 is unset.
 
@@ -63,7 +63,7 @@ role_assignment:
 ```
 
 This would assign the role `admin` to users with the value `myAdminRole` in the claim `ocisRoles`.
-The role `user` to users with the values `myUserRole` in the claims `ocisRoles` and so on.
+The role `user` to users with the values `myUserRole` in the claim `ocisRoles` and so on.
 
 Claim values that are not mapped to a specific ownCloud Infinite Scale role will be ignored.
 
