--- a/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
@@ -34,12 +34,12 @@ role_quotas:
 
 ## Automatic Role Assignments
 
-When users login, they automatically get a role assigned. The automatic role assignment can be
+When users log in, they automatically get a role assigned. The automatic role assignment can be
 configured in different ways. The `PROXY_ROLE_ASSIGNMENT_DRIVER` environment variable (or the `driver`
 setting in the `role_assignment` section of the configuration file) selects which mechanism to use for
 the automatic role assignment.
 
-When set to `default`, all users that do not have a role assigned at the time for the first login will
+When set to `default`, all users that do not have a role assigned at the time of their first login will
 get the role 'user' assigned. (This is also the default behavior if `PROXY_ROLE_ASSIGNMENT_DRIVER`
 is unset.
 
@@ -65,11 +65,11 @@ role_assignment:
 This would assign the role `admin` to users with the value `myAdminRole` in the claim `ocisRoles`.
 The role `user` to users with the values `myUserRole` in the claim `ocisRoles` and so on.
 
-Claim values that are not mapped to a specific ownCloud Infinite Scale role will be ignored.
+Claim values that are not mapped to a specific Infinite Scale role will be ignored.
 
-Note: An ownCloud Infinite Scale user can only have a single role assigned. If the configured
+Note: An Infinite Scale user can only have a single role assigned. If the configured
 `role_mapping` and a user's claim values result in multiple possible roles for a user, an error
-will be logged and the user will not be able to login.
+will be logged and the user will not be able to log in.
 
 The default `role_claim` (or `PROXY_ROLE_ASSIGNMENT_OIDC_CLAIM`) is `roles`. The `role_mapping` is:
 
