Add a Knowledge Base

--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -69,6 +69,8 @@
 ** xref:conf-examples/search/configure-search.adoc[Search]
 * Deployment Examples
 ** xref:depl-examples/small-scale.adoc[Small-Scale with systemd]
+* Additional Information
+** xref:additional-information/knowledge-base.adoc[Knowledge Base]
 
 ////
 * Migration
